UI-3221 [GateIn] Alignment Bugs on Add user, Group vs Page managenent

--- a/platform-ui-web-eXoResources/src/main/webapp/skin/less/Portlets/UIOrganizationPortlet/Style.less
+++ b/platform-ui-web-eXoResources/src/main/webapp/skin/less/Portlets/UIOrganizationPortlet/Style.less
@@ -180,6 +180,9 @@
 /*#######################	UIMemberShipManagement #################################*/
 
 
-
+.uiOrganizationPortlet .groupNavigation .title {
+  line-height: 17px;
+  padding: 8px;
+}
 
 
